// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusPin /> should render the heading Ativo 1`] = `
<div
  class="css-1xl4ljt"
  color="active"
>
  <h3
    class="css-1rt2vi7"
  >
    Ativo
  </h3>
</div>
`

exports[`<StatusPin /> should render the heading Inativo 1`] = `
<div
  class="css-tvybe5"
  color="inactive"
>
  <h3
    class="css-1rt2vi7"
  >
    Inativo
  </h3>
</div>
`
